--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,11 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+[Bb]uild/
+[Bb]inaries/
+[Ii]ntermediate/
+
+[Tt]hirdParty/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
